Fixed overflow issues when the name of a "udstiller" became too long

--- a/theme/assets/styles/layouts/_udstiller.scss
+++ b/theme/assets/styles/layouts/_udstiller.scss
@@ -19,4 +19,10 @@
     list-style: none;
     padding-left: 0;
   }
+
+  &__list-item {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
